--- a/퍼블리셔/day03/miniproject/ably.css
+++ b/퍼블리셔/day03/miniproject/ably.css
@@ -54,12 +54,13 @@
     padding: 14px 16px;
 }
 
-.button:hover{
-    background-color: #0000000d;
+.half-box > .button:first-child{
+    color: #ff5160;
+    font-family: 'Noto Sans KR', sans-serif;
 }
 
-.main{
-    color: #ff5160;
+.button:hover{
+    background-color: #0000000d;
 }
 
 .hero-box{
