--- a/퍼블리셔/day03/miniproject/ably.css
+++ b/퍼블리셔/day03/miniproject/ably.css
@@ -1,78 +1,81 @@
 @font-face {
-    font-family: 'Pretendard-Regular';
-    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-    font-weight: 700;
-    font-style: normal;
+  font-family: 'Pretendard-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff')
+    format('woff');
+  font-weight: 700;
+  font-style: normal;
 }
 
-.max-container{
-    /* viewport(기기) */
-    width: 100vw;
-    height: 100vh;
+.max-container {
+  /* viewport(기기) */
+  width: 100vw;
+  height: 300vh;
 }
 
-.centeralize{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.centeralize {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.navi-box{
-    width: 100%;
-    height: 80px;
+.navi-box {
+  position: fixed;
+  width: 100%;
+  height: 80px;
 }
 
-.navi-box > .navi{
-    width: 60%;
-    height: 100%;
+.navi-box > .navi {
+  width: 60%;
+  height: 100%;
 
-    margin: 0 auto;
+  margin: 0 auto;
 
-    /* 자식들 배치화 */
-    display: flex;
+  /* 자식들 배치화 */
+  display: flex;
 }
 
-.half-box{
-    width: 50%;
-    height: 100%;
+.half-box {
+  width: 50%;
+  height: 100%;
 }
 
 .half-box > img {
-    height: 100%;
+  width: 160px;
+  height: 100%;
 }
 
-.half-box > .button{
-    border: none;
-    border-radius: 20px;
-    background-color: transparent;
+.half-box > .button {
+  border: none;
+  border-radius: 20px;
+  background-color: transparent;
 
-    height: 48px;
+  height: 48px;
 
-    font-family: 'Pretendard-Regular';
-    font-size: 16px;
+  font-family: 'Pretendard-Regular';
+  font-size: 16px;
 
-    padding: 14px 16px;
+  padding: 14px 16px;
 }
 
-.half-box > .button:first-child{
-    color: #ff5160;
-    font-family: 'Noto Sans KR', sans-serif;
+.half-box > .button:first-child {
+  color: #ff5160;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
-.button:hover{
-    background-color: #0000000d;
+.button:hover {
+  background-color: #0000000d;
 }
 
-.hero-box{
-    width: 100vw;
-    height: calc(100vh - 80px);
+.hero-box {
+  width: 100vw;
+  height: calc(100vh - 80px);
 
-    background-image: url(hero-bg.jpg);
-    background-size: cover;
+  background-image: url(hero-bg.jpg);
+  background-size: cover;
 }
 
-.hero-box > .title{
-    font-size: 50px;
-    text-align: center;
-    color: white;
+.hero-box > .title {
+  font-size: 50px;
+  text-align: center;
+  color: white;
 }
