--- a/퍼블리셔/day05/firfin.css
+++ b/퍼블리셔/day05/firfin.css
@@ -1,110 +1,172 @@
 @font-face {
-    font-family: 'Pretendard-Regular';
-    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-family: 'Pretendard-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff')
+    format('woff');
 }
 @font-face {
-    font-family: 'Pretendard-SemiBold';
-    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-SemiBold.woff') format('woff');
+  font-family: 'Pretendard-SemiBold';
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-SemiBold.woff')
+    format('woff');
 }
-body{
-    background-color: #bea9ed;
-    color: #232323;
+body {
+  background-color: #bea9ed;
+  color: #232323;
 }
-header{
-    width: 100vw;
-    height: 80px;
+header {
+  width: 100vw;
+  height: 80px;
 
-    position: fixed;
+  position: fixed;
 
-    background-color: transparent;
+  background-color: transparent;
 }
-nav{
-    width: 65%;
-    height: 100%;
+nav {
+  width: 65%;
+  height: 100%;
 
-    margin: 0 auto;
-    
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.logo-box{
-    width: 140px;
-    height: 45px;
-}
-.logo-box>img{
-    width: 100%;
-    height: 100%;
-}
-.link-box{
-    width: fit-content;
-    height: 100%;
+  margin: 0 auto;
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.link-button{
-    font-family: 'Pretendard-SemiBold';
-    font-size: 20px;
+.logo-box {
+  width: 140px;
+  height: 45px;
 }
-.link-button:hover{
-    color: white;
+.logo-box > img {
+  width: 100%;
+  height: 100%;
 }
-main{
-    width: 100vw;
-}
-.first{
-    width: 65%;
-    height: 100vh;
+.link-box {
+  width: fit-content;
+  height: 100%;
 
-    margin: 0 auto;
-    padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 30px;
 
-    display: flex;
-    align-items: center;
+  position: relative;
 }
-.half-box{
-    width: 50%;
-    font-family: 'Pretendard-SemiBold';
+.link-button {
+  font-family: 'Pretendard-SemiBold';
+  font-size: 20px;
 }
-.maintitle{
-    font-size: 66px;
-    line-height: 1.4;
+.link-button:hover {
+  color: white;
 }
-.subtitle{
-    font-size: 30px;
-    margin: 50px 0;
-}
-.download-buttons-box{
-    width: 100%;
-    
-}
-.download-button{
-    width: 180px;
-    height: 60px;
+.drop-box {
+  /* display: none; */
+  position: absolute;
+  left: -246px;
+  z-index: 1;
 
-    margin: 0 10px 0 0;
+  padding: 32px 20px;
+  margin: 40px 0 0 0;
+  border-radius: 4px;
+  background-color: white;
 
-    border: none;
-    border-radius: 5px;
-    background-color: white;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 28px;
+  color: #232323;
+}
+.drop-button {
+  width: 360px;
+  padding: 14px 20px;
+}
+main {
+  width: 100vw;
+}
+.first {
+  width: 65%;
+  height: 100vh;
 
-    font-size: 20px;
-    font-family: 'Pretendard-SemiBold';
+  margin: 0 auto;
+  padding: 20px;
+
+  display: flex;
+  align-items: center;
 }
-.reverse{
-    display: flex;
-    flex-direction: row-reverse;
-    position: relative;
+.half-box {
+  position: relative;
+  width: 50%;
+  font-family: 'Pretendard-SemiBold';
 }
-.card{
-    width: 960px;
-    height: 540px;
-    position: absolute;
+.maintitle {
+  font-size: 66px;
+  line-height: 1.4;
 }
-.phone{
-    width: 550px;
-    height: 700px;
+.subtitle {
+  font-size: 30px;
+  margin: 50px 0;
+}
+.download-buttons-box {
+  width: 100%;
+}
+.download-button {
+  width: 180px;
+  height: 60px;
+
+  margin: 0 10px 0 0;
+
+  border: none;
+  border-radius: 5px;
+  background-color: white;
+
+  font-size: 20px;
+  font-family: 'Pretendard-SemiBold';
+}
+/* .reverse {
+  display: flex;
+  flex-direction: row-reverse;
+  position: relative;
+} */
+.card {
+  width: 960px;
+  height: 540px;
+  position: absolute;
+  top: 10%;
+  left: -60%;
+}
+.phone {
+  width: 550px;
+  height: 700px;
+}
+.second {
+  background-color: #f1eee1;
+  padding: 120px 0;
+}
+
+.review-card-slider {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  width: 65%;
+  margin: 0 auto;
+}
+.slider-button {
+  width: 50px;
+  height: 50px;
+  border: none;
+  border-radius: 50%;
+  background-color: #e2d7c4;
+}
+.review-card {
+  width: 360px;
+  height: 150px;
+  padding: 40px 0;
+  background-color: white;
+  border-radius: 4px;
+
+  font-size: 20px;
+  text-align: center;
+  font-family: 'Pretendard-SemiBold';
+}
+
+.review-text {
+  margin: 20px 0;
+  line-height: 30px;
 }
